style: fix layout broken in mobile

--- a/src/components/Sudoku/Board/index.scss
+++ b/src/components/Sudoku/Board/index.scss
@@ -1,3 +1,5 @@
 .Board-root{
-  @apply grid grid-cols-3 grid-rows-3 w-fit;
+  @apply grid w-fit;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
